--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 db.url=jdbc:mysql://localhost:3306/xreview
-db.username=assessment
-db.password=redrum
+db.username=root
+db.password=9937903813
 jdbc.driverClassName=com.mysql.cj.jdbc.Driver
